<resources>
    <string name="app_name">바스코로드</string>
    <string name="district_prompt">선택 지역</string>
    <string name="login_id">Email</string>
    <string name="login_password">Password</string>
    <string name="login_activity_title">로그인</string>
    <string name="auto_login">자동 로그인</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원 가입</string>
    <string name="ask_sign_up">아직 회원이 아니십니까?  <u><b>가입하기</b></u></string>
    <string name="double_check">중복 체크</string>
    <string name="user_name">이름</string>
    <string name="user_department">소속</string>
    <string name="login_err">로그인 에러</string>
    <string name="login_err_message">아이디와 비밀번호가 일치하지 않습니다.</string>
    <string name="confirm">확인</string>
    <string name="logout">로그아웃</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="change">변경</string>
    <string name="change_confirm">수정 완료</string>
    <string name="list_room">방 목록</string>
    <string name="myPage">마이 페이지</string>
    <string name="roomDelete">삭제</string>
    <string name="roomDeleteCheckTitle">방을 삭제 하시겠습니까?</string>
    <string name="roomPassword">방 비밀번호</string>
    <string name="addMperson">실종자 추가</string>
    <string name="mpersonName">실종자 이름</string>
    <string name="mpersonString">실종 위치</string>
    <string name="mpersonPhoto">실종자 사진</string>
    <string name="MpersonDesc">구체적인 세부사항을 입력해주세요</string>
    <string name="selectDate">실종일자를 선택해주세요</string>
    <string name="changeDate">변경</string>
    <string name="searchLocation">검색</string>
    <string name="insertMperson">실종자 추가</string>
    <string name="selectAge">실종자 생년월일을 선택해주세요</string>
    <string name="manageDepartment">소속 관리</string>
    <string name="modifyDepartment">소속 수정</string>
    <string name="addDepartmentTitle">소속 추가</string>
    <string name="addDepartment">소속 추가</string>
    <string name="selectDepartmentTitle">소속 선택</string>
    <string name="modifyDepartmentTitle">소속 수정</string>
    <string name="deleteDepartmentTitle">정말로 삭제 하시겠습니까?</string>
    <string name="modify">수정</string>
    <string name="DepartmentName">소속명</string>
    <string name="messageChangeColor">클릭하여 색상 설정</string>
    <string name="color">색상</string>
    <string name="label_map_type">유형</string>
    <string name="label_scale_type">축적:</string>
    <string name="label_button_reset">초기화</string>
    <string name="label_popup_location">현위치: </string>
    <string name="notify_department">기존의 소속이 삭제되었으므로 소속을 선택해주세요.</string>

    <string name="label_unusual_location">특이사항 기록</string>
    <string name="label_button_save">저장</string>
    <string name="label_button_cancel">취소</string>
    <string name="dialog_select_prompt">어디서 가져올거냐</string>
    <string name="dialog_select_camera">카메라</string>

    <string name="dialog_select_gallery">갤러리</string>
    <string name="label_unusual_edittext">수색 불가 이유를 적어주세요.</string>
    <string name="center_describtion_icon">중심으로 지정할 위치를 터치해주세요</string>

    <string name="label_set_map_details">축척 및 구역 크기 지정</string>
    <string name="label_bearing">현재 회전 각도: </string>

    <string name="start">수색 시작</string>
    <string name="zoom_in">화면 확대</string>
    <string name="zoom_out">화면 축소</string>
    <string name="reload">새로고침</string>
    <string name="label_mPerson_info">실종자 정보</string>
    <string name="label_set_unit_scale">단위길이</string>
    <string name="limit">미허용 시, 카메라와 갤러리를 사용할 수 없습니다.</string>
    <string name="label_create_mappw">지도 비밀번호 설정</string>
    <string name="label_enter_mappw">지도 비밀번호 확인</string>
    <string name="settings_pwd_equal">비밀번호가 일치</string>
    <string name="settings_pwd_not_equal">비밀번호가 불일치</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deleteDepartment">소속 삭제</string>
    <string name="detailmessage">특이사항을 기록해주세요.</string>
    <string name="specialTitle">특이사항</string>
    <string-array name="map_types">
        <item>기본</item>
        <item>위성</item>
        <!--item>Hybrid</item-->
        <!--        <item>Terrain</item>-->
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="scale_type">
        <item>20m</item>
        <item>30m</item>
        <item>50m</item>
        <item>100m</item>
        <item>250m</item>
        <item>500m</item>
    </string-array>

    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
</resources>
