<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="#eeeeee"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginErrorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login_err"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:background="@color/burgundy">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_err_message"
            android:textColor="#000"
            android:textSize = "15sp"
            android:layout_marginBottom="10dp">
         </TextView>
    </LinearLayout>
    <Button
        android:id="@+id/login_err_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/confirm">

    </Button>
</LinearLayout>