<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.MyPageActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/my_page_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:weightSum="10"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="3.5"
                android:text="@string/email"
                >
            </TextView>
            <TextView
                android:id="@+id/user_id"
                android:layout_weight="6.5"
                android:layout_width="0dp"
                android:layout_height="50dp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/password">
            </TextView>

            <EditText
                android:id="@+id/change_password"
                tools:ignore="LabelFor"
                android:layout_weight="6.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textNoSuggestions|textPassword"
                android:importantForAutofill="no"
                android:cursorVisible="true"
                android:hint="@string/login_password"
                android:background="@drawable/form">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/password_check">
            </TextView>
            <EditText
                android:id="@+id/change_check_password"
                tools:ignore="LabelFor"
                android:layout_weight="4.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textNoSuggestions|textPassword"
                android:importantForAutofill="no"
                android:cursorVisible="true"
                android:hint="@string/login_password"
                android:background="@drawable/form">
            </EditText>
            <Button
                android:id="@+id/change_pasaword_btn"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/change">

            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:weightSum="10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/user_name">
            </TextView>
            <TextView
                android:layout_weight="6.5"
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_height="50dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="3.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/user_department">
            </TextView>
            <EditText
                android:id="@+id/change_department"
                tools:ignore="LabelFor"
                android:layout_weight="4.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textNoSuggestions"
                android:importantForAutofill="no"
                android:cursorVisible="true"
                android:background="@drawable/form">
            </EditText>
            <Button
                android:id="@+id/change_department_btn"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/change">
            </Button>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/list_room"
            android:layout_margin="20dp"
            android:textSize="30sp"
            android:gravity="center">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <ListView
                android:id="@+id/my_room_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <Button
            android:id="@+id/change_confirm_btn"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:background="@drawable/button_background2"
            android:textColor="#ffffff"
            android:text="@string/change_confirm">
        </Button>

    </LinearLayout>

</ScrollView>