<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.activity.SignUpActivity">

    <TextView

        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25dp"
        android:paddingVertical="11dp"
        android:background="@color/burgundy"
        android:text="@string/sign_up">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="13dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/sign_up_email"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/form"
                    android:cursorVisible="true"
                    android:hint="@string/login_id"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions"
                    tools:ignore="LabelFor"></EditText>

                <Button
                    android:id="@+id/sign_up_email_check_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGray"
                    android:text="@string/double_check"
                    android:textColor="#ffffff"
                    android:textStyle="bold"></Button>

            </LinearLayout>

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/form"
                android:cursorVisible="true"
                android:hint="@string/login_password"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions|textPassword"
                tools:ignore="LabelFor"></EditText>

            <EditText
                android:id="@+id/sign_up_check_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/form"
                android:cursorVisible="true"
                android:hint="@string/login_password"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions|textPassword"
                tools:ignore="LabelFor"></EditText>

            <EditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/form"
                android:cursorVisible="true"
                android:hint="@string/user_name"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                tools:ignore="LabelFor"></EditText>

            <Spinner
                android:id="@+id/sign_up_department"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/form"
                android:hint="@string/user_department"
            />

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button_background2"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold">

            </Button>

        </LinearLayout>
    </ScrollView>

</LinearLayout>