<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:background="@drawable/custom_dialog_bg"
    tools:context=".ui.activity.InsertDepartmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/burgundy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/addDepartment"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#00ff0000">
        </TextView>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/divider_burgundy"/>

    <LinearLayout
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="0dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:textColor="@color/burgundy"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/DepartmentName">

            </TextView>

            <EditText
                android:id="@+id/editText_departmentName"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/custom_background_white"
                 />

        </LinearLayout>

        <LinearLayout
            android:padding="0dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:textColor="@color/burgundy"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/color">

            </TextView>

            <Button
                android:id="@+id/selectColor_btn"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/color_change_btn"
                android:text="@string/messageChangeColor"
                android:textSize="15sp"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle"
                 />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="7dp"
        android:weightSum="2">
        <Button
            android:id="@+id/button_cancel_depart"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:padding="12dp"
            android:layout_marginRight="7dp"
            android:textSize="15sp"
            android:text="@string/label_button_cancel"
            android:textColor="@color/dark_gray"
            android:background="@drawable/button_background_gray"
            style="?android:attr/borderlessButtonStyle"

            />
        <Button
            android:id="@+id/button_accept_depart"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:padding="12dp"
            android:textSize="15sp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:background="@drawable/button_background_gray"
            android:backgroundTint="@color/burgundy"
            android:backgroundTintMode="multiply"
            style="?android:attr/borderlessButtonStyle"

            />
    </LinearLayout>

</LinearLayout>